[package]
name = "nexis-ml-rs"
version = "0.5.2"
edition = "2021"
description = "Python-free, single-binary ML engine for the Nexis terminal (Phase 3) — same NDJSON protocol and run store as nexis-ml."
license = "Apache-2.0"
authors = ["Ryan Wetzstein"]
repository = "https://github.com/rwetz/nexis-ml-rs"

# The binary is named `nexis-ml` so Nexis detects/spawns it exactly like
# the Python engine (it matches on the file stem "nexis-ml"); the two are
# never on PATH together — this one is downloaded to its own dir.
[[bin]]
name = "nexis-ml"
path = "src/main.rs"

[dependencies]
# `cubecl` exposes burn::cubecl (the Runtime trait) so we can query the wgpu
# compute client's memory usage for the mem/gpu_mb metric.
burn = { version = "0.21.0", default-features = false, features = ["std", "ndarray", "autodiff", "wgpu", "cubecl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Decode folder-per-class images for the CNN path; png also encodes the
# sample-grid artifact. Lean feature set — no extra codecs pulled in.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }

[profile.release]
opt-level = 3
lto = true
strip = true
